added save path and UI

--- a/WineScraper/packages.config
+++ b/WineScraper/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="HtmlAgilityPack" version="1.11.33" targetFramework="net48" />
   <package id="MessageCustomHandler" version="1.0.0.2" targetFramework="net48" />
+  <package id="Ookii.Dialogs.WinForms" version="1.2.0" targetFramework="net48" />
 </packages>
